assets/css/main.css
/* ... */
.booking__item-content{
    padding: 28px 22px 30px;
}

.booking__item-title{
    font-family: var(--font-family);
    font-weight: 600;
    font-size: 1.8rem;
    line-height: 3rem;
    color: #000
}

.booking__item-start{
    margin-top: 2px;
    display: flex;
    align-items: center;
    column-gap: 6px;
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 2.8rem;
    color: #FEA31B;
}

.booking__item-action{
    margin-top: 5px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.booking__item-price{
    font-weight: 400;
    font-size: 1.4rem;
    line-height: 2.6rem;

    color: #6C7B83;
}
.booking__item-price span{
    font-size: 1.8rem;
    font-weight: 600;
    line-height: 3rem;
    color: var(--black-color);
}
.booking__item-btn{

}

.booking__view-all{
    margin-top: 38px;
}
/* END STYLE */

/* GALLERY STYLE */
.gallery{
    padding: 170px 0;
    background-color: var(--white-color);
}
.gallery .container{
    align-items: center;
    justify-content: space-between;
}
.gallery__images{
    width: 570px;
    height: 570px;
    display: flex;
    align-items: center;
    flex-direction: column;
    flex-wrap: wrap-reverse;
    justify-content: center;
    gap: 30px;
}
.gallery__img{
    border-radius: 30px;
    overflow: hidden;
    width: 270px;
    height: 324px;
}
.gallery__img:first-child{
    height:200px;
}
.gallery__img:last-child{
    height:402px;
}
.gallery__img img{
    width: 100%;
    height: 100%;
    object-fit: cover;
}
.gallery__content{
    max-width: 470px;
}

.gallery__content{
    display: flex;
    flex-direction: column;
}

.gallery__title{
    font-weight: 700;
    font-size: 4.2rem;
    line-height: 5.2rem;

    letter-spacing: -0.02em;

    color: var(--black-color);
    margin-bottom: 16px;
}

.gallery__description{
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 2.8rem;
}

.gallery__btn{
    margin-top: 38px;
}
/* END STYLE */


/* SUBCRIBE STYLE */
.subcribe{
    padding: 96px 0;
    background-color: #F5F9FF;
}
.subcribe .container{
    align-items: center;
    justify-content: space-between;
    position: relative;
    z-index: 2;
}
.subcribe .container:after{
    content: '';
    position: absolute;
    background: url('../image/circle-1.png') no-repeat;
    transform: translateX(-50%);
    width: 163px;
    height: 163px;
    z-index: 1
}
.subcribe .container:before{
    content: '';
    position: absolute;
    background: url('../image/circle-1.png') no-repeat;
    top: 0;
    right: 0;
    transform: translate(50%,-40%);
    width: 163px;
    height: 163px;
    z-index: 1
}
.subcribe__bg-image{
    position: absolute;
    background: url('../image/circle-1.png') no-repeat;
    top: 0;
    right: 0;
    transform: translate(25%,12%);
    width: 163px;
    height: 163px;
    z-index: 1
}
.subcribe__content{
    z-index: 2;
}

.subcribe__title{
    font-weight: 700;
    font-size: 4.2rem;
    line-height: 5.2rem;

    letter-spacing: -0.02em;
    color: var(--black-color);
    margin-bottom: 16px;
}

.subcribe__description{
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 2.8rem;
    max-width: 507px;
    display: inline-block;
}

.subcribe__email{
    display: flex;
    background: var(--white-color);
    border-radius: 33px;
    height: 64px;
    padding-left: 28px;
    z-index: 2;
}

.subcribe__input{
    font-family: var(--font-family);
    background-color: transparent;
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 2.8rem;
}

.subcribe__btn{
    padding: 18px 34px;
    font-weight: 600;
    font-size: 1.6rem;
    line-height: 2.8rem;
}

/* END STYLE */


/* FOOTER STYLE */
.footer{
    padding-top: 96px;
    background-color: #0E2241;
}
.footer .container{
    display: grid;
    grid-template-columns: 2fr 1fr 1fr 1fr;
    position: relative;
    
    padding-bottom: 38px;
}
.footer .container:after{
    content: '';
    position: absolute;
    width: 100%;
    height: 1px;
    left: 0;
    bottom: 0;
    background-color:#394659;
}

.footer__info{
    display: flex;
    flex-direction: column;
}
.footer__logo{
    margin-bottom: 18px;
}
.footer__logo-text{
    font-weight: 700;
    font-size: 2.4rem;
    line-height: 3.4rem;
    color: var(--white-color);
}
.footer__logo-text > span{
    color: var(--primary-color)
}
.footer__slogan{
    max-width: 267px;
    font-weight: 400;
    font-size: 1.4rem;
    line-height: 2.6rem;

    color: #A3A8B1;
    margin-bottom: 18px;
}
.footer__socials{
    display: flex;
}
.footer__social-link:not(:last-child){
    margin-right: 18px;
}
.footer__menu{

}
.footer__header{
    font-family: var(--font-family);
    font-weight: 600;
    font-size: 1.6rem;
    line-height: 2.8rem;
    color: var(--white-color);
    position: relative;
    padding-bottom: 14px;
}
.footer__header:after{
    content: '';
    position: absolute;
    width: 130px;
    height: 1px;
    left: 0;
    bottom: 0;
    background-color: #394659;
}
.footer__menu ul{
    margin-top: 28px;
}
.footer__menu ul li:not(:last-child){
    margin-bottom: 12px;
}
.footer__menu ul li a{
    font-family: var(--font-family);
    font-weight: 400;
    font-size: 1.4rem;
    line-height: 2.6rem;
    color: #A3A8B1;
    transition: all .1s ease
}
.footer__menu ul li:hover a{
    color: var(--white-color)
}

.footer__contacts{
    margin-top: 28px;
}
.footer__contact-info{
    font-weight: 400;
    font-size: 1.4rem;
    line-height: 2.6rem;
    color: #A3A8B1;
}
.footer__contact-info:not(:last-child){
    margin-bottom: 12px;
}
.footer__contact-info span{
    font-weight: 600;
}
.footer__bottom{
    font-weight: 400;
    font-size: 1.4rem;
    line-height: 2.6rem;

    text-align: center;

    color: #878E99;
    margin: 28px 0;
}
/* END STYLE */

